fixed spacing

--- a/style.css
+++ b/style.css
@@ -238,6 +238,7 @@ body{
 }
 
 .box1-content p{
+    padding-top: 15px;
     color: #007185;
 }
 
